--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,12 @@
         tools:layout_editor_absoluteX="151dp"
         tools:layout_editor_absoluteY="467dp" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="102dp"
+        tools:layout_editor_absoluteY="208dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
