--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,12 @@
         tools:layout_editor_absoluteX="102dp"
         tools:layout_editor_absoluteY="208dp" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="266dp"
+        tools:layout_editor_absoluteY="91dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
