--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -43,72 +43,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/edt_pw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="72dp"
-        android:ems="10"
-        android:hint="비밀번호를 입력해주세요."
-        android:inputType="textPersonName"
-        android:textColorHint="@color/text_hint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_join_id" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비밀번호"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/edt_pw"
-        app:layout_constraintEnd_toStartOf="@+id/edt_pw"
-        app:layout_constraintHorizontal_bias="0.927"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edt_pw" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="아이디"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/edt_join_id"
-        app:layout_constraintEnd_toStartOf="@+id/edt_join_id"
-        app:layout_constraintHorizontal_bias="0.828"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edt_join_id" />
-
-    <EditText
-        android:id="@+id/edt_join_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="76dp"
-        android:ems="10"
-<<<<<<< HEAD
-<<<<<<< 4b87d4aa0276472010595dbb2e5b7007a64c3952
-        android:hint="아이디를 입력해주세요."
-        android:inputType="textPersonName"
-=======
-        android:hint="@string/user_pw"
-        android:inputType="textPassword"
->>>>>>> 220526 commit_andro
-=======
-        android:hint="@string/user_pw"
-        android:inputType="textPassword"
->>>>>>> android
-        android:textColorHint="@color/text_hint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
     <Button
         android:id="@+id/btn_loginSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="150dp"
         android:text="로그인"
         android:textSize="20sp"
@@ -121,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="62dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="63dp"
         android:fontFamily="sans-serif"
         android:text="아직회원이 아니신가요?  회원가입 하러가기"
@@ -136,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="51dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="51dp"
         android:text="계정을 잊으셨나요? ID찾기 또는 비밀번호 찾기"
         android:textSize="16sp"
@@ -144,14 +84,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_loginSubmit" />
 
-<<<<<<< 4b87d4aa0276472010595dbb2e5b7007a64c3952
-=======
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="168dp"
         android:layout_height="155dp"
         android:layout_marginStart="121dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="112dp"
         android:layout_marginEnd="122dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -159,22 +98,62 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo_edit2" />
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="52dp"
-        android:background="@color/text_hint"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="아이디"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/edt_join_id"
+        app:layout_constraintEnd_toStartOf="@+id/edt_join_id"
+        app:layout_constraintHorizontal_bias="0.783"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/edt_join_id" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/edt_pw"
+        app:layout_constraintEnd_toStartOf="@+id/edt_pw"
+        app:layout_constraintHorizontal_bias="0.864"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/edt_pw"
+        app:layout_constraintVertical_bias="0.277" />
+
+    <EditText
+        android:id="@+id/edt_join_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:layout_marginEnd="72dp"
+        android:ems="10"
+        android:hint="아이디를 입력해주세요."
+        android:inputType="textPersonName"
+        android:textColorHint="@color/text_hint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <EditText
+        android:id="@+id/edt_pw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="68dp"
+        android:ems="10"
+        android:hint="비밀번호를 입력해주세요."
+        android:inputType="textPersonName"
+        android:textColorHint="@color/text_hint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_join_id" />
 
     <Button
         android:id="@+id/btn_joinMove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="160dp"
         android:text="회원가입"
         android:textSize="20sp"
@@ -183,10 +162,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_join" />
 
-
-
-<<<<<<< HEAD
->>>>>>> 220526 commit_andro
-=======
->>>>>>> android
 </androidx.constraintlayout.widget.ConstraintLayout>
