--- a/app/src/main/res/layout/activity_find_id.xml
+++ b/app/src/main/res/layout/activity_find_id.xml
@@ -97,11 +97,12 @@
         android:id="@+id/textView4"
         android:layout_width="306dp"
         android:layout_height="55dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/henam"
         android:text="@string/find_id"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="120dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
