--- a/app/src/main/res/drawable/layout_border.xml
+++ b/app/src/main/res/drawable/layout_border.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--<solid android:color="@color/green_bg"/>-->
+    <solid android:color="@color/green_bg"/>
     <!--<stroke android:width="3dip" android:color="@color/green_bg" />-->
     <corners android:radius="15dip"/>
     <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
