--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="text_hint">#8C8C8C</color>
     <color name="warning">#FFF43636</color>
     <color name="check_complete">#2196f3</color>
+    <color name="green_bg">#334BAF4B</color>
 </resources>
