--- a/app/src/main/res/layout/activity_diary_write.xml
+++ b/app/src/main/res/layout/activity_diary_write.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="45dp"
         android:fontFamily="@font/henam"
         android:text="제목"
         android:textSize="20sp"
@@ -23,7 +23,7 @@
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="22dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
@@ -39,7 +39,7 @@
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
@@ -56,7 +56,7 @@
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="45dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="22dp"
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
         android:gravity="center"
@@ -70,7 +70,7 @@
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="23dp"
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
         android:gravity="center"
@@ -113,7 +113,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/henam"
         android:text="농장 온도"
         android:textSize="20sp"
@@ -124,8 +124,8 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/henam"
         android:text="농장 습도"
         android:textSize="20sp"
@@ -137,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:fontFamily="@font/henam"
         android:text="전염도"
         android:textSize="20sp"
@@ -148,8 +148,8 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="35dp"
         android:fontFamily="@font/henam"
         android:text="방제 약품"
         android:textSize="20sp"
@@ -161,7 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:fontFamily="@font/henam"
         android:text="방제 횟수"
         android:textSize="20sp"
@@ -173,7 +173,7 @@
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="55dp"
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
         android:gravity="center"
@@ -186,7 +186,7 @@
         android:id="@+id/edt_title"
         android:layout_width="295dp"
         android:layout_height="41dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/layout_border"
         android:ems="10"
@@ -194,13 +194,14 @@
         android:inputType="textPersonName"
         android:textColorHint="@color/text_hint"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView28"
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
     <EditText
         android:id="@+id/edt_content"
         android:layout_width="362dp"
         android:layout_height="184dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/layout_border"
         android:ems="10"
         android:gravity="top"
@@ -215,7 +216,7 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:text="작성하기"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
