--- a/app/src/main/res/layout/activity_find_id.xml
+++ b/app/src/main/res/layout/activity_find_id.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="150dp"
         android:fontFamily="@font/henam"
         android:text="아이디 찾기"
@@ -95,10 +95,12 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="306dp"
-        android:layout_height="55dp"
+        android:layout_width="309dp"
+        android:layout_height="119dp"
         android:layout_marginTop="60dp"
         android:fontFamily="@font/henam"
+        android:gravity="center"
+        android:lineSpacingExtra="10dp"
         android:text="@string/find_id"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
