--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -55,7 +55,7 @@
         android:layout_width="289dp"
         android:layout_height="126dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,9 +96,11 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="311dp"
-        android:layout_height="88dp"
-        android:layout_marginTop="70dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/henam"
+        android:gravity="center"
+        android:lineSpacingExtra="10dp"
         android:text="@string/find_pw"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
