--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_login4"
+        android:id="@+id/btn_toSetPw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <EditText
-            android:id="@+id/edt_name"
+            android:id="@+id/edt_id"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
