--- a/app/src/main/res/layout/activity_set_pw.xml
+++ b/app/src/main/res/layout/activity_set_pw.xml
@@ -36,17 +36,16 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_login3"
+        android:id="@+id/btn_updatePw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="150dp"
         android:fontFamily="@font/henam"
         android:text="비밀번호 설정"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
@@ -64,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <EditText
-            android:id="@+id/edt_name"
+            android:id="@+id/edt_pw1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
@@ -73,8 +72,22 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:fontFamily="@font/henam"
-            android:hint="@string/user_pw"
-            android:inputType="textPersonName"
+            android:hint="비밀번호"
+            android:inputType="textPassword"
+            android:textColorHint="@color/text_hint" />
+
+        <EditText
+            android:id="@+id/edt_pw2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edit_text_bg"
+            android:drawableStart="@drawable/pw_resize"
+            android:drawablePadding="10dp"
+            android:ems="10"
+            android:fontFamily="@font/henam"
+            android:hint="비밀번호 확인"
+            android:inputType="textPassword"
             android:textColorHint="@color/text_hint" />
 
     </LinearLayout>
@@ -91,4 +104,14 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/tv_pwCheck"
+        android:layout_width="269dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="24dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
