--- a/app/src/main/res/layout/activity_my_farm.xml
+++ b/app/src/main/res/layout/activity_my_farm.xml
@@ -64,7 +64,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView74"
+                    android:id="@+id/tv_realTime1"
                     android:layout_width="159dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/henam"
@@ -72,7 +72,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView75"
+                    android:id="@+id/tv_realTime2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -81,6 +81,12 @@
                     android:text="PM 02:36:01"
                     android:textSize="16sp" />
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_refresh"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="refresh" />
 
             <TextView
                 android:id="@+id/textView76"
@@ -269,7 +275,7 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/img_reservation"
+                            android:id="@+id/imageView5"
                             android:layout_width="match_parent"
                             android:layout_height="65dp"
                             android:layout_marginTop="10dp"
