--- a/app/src/main/res/layout/activity_farm_info.xml
+++ b/app/src/main/res/layout/activity_farm_info.xml
@@ -14,29 +14,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:orientation="vertical">
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView20"
-            android:layout_width="180dp"
-            android:layout_height="73dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/farmer" />
-
         <TextView
-            android:id="@+id/tv_id_info"
+            android:id="@+id/tv_fInfo"
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0.5"
-            android:background="@drawable/edit_text_bg"
+            android:layout_weight="0.7"
             android:fontFamily="@font/henam"
             android:gravity="center"
-            android:hint="아이디"
+            android:hint="우리 농장"
             android:textSize="30sp" />
 
         <LinearLayout
@@ -48,14 +38,15 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/cardview_compat_inset_shadow"
                 android:layout_weight="0.5"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
-                android:text="이름 :"
+                android:text="기계넘버"
                 android:textSize="30sp" />
 
-            <EditText
-                android:id="@+id/tv_serial_fInfo"
+            <TextView
+                android:id="@+id/tv_serial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
@@ -65,7 +56,6 @@
                 android:fontFamily="@font/henam"
                 android:gravity="center"
                 android:inputType="textPersonName"
-                android:textColor="@color/text_hint"
                 android:textColorHint="@color/text_hint"
                 android:textSize="30sp" />
         </LinearLayout>
@@ -82,11 +72,11 @@
                 android:layout_weight="0.5"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
-                android:text="이메일:"
+                android:text="하우스 수"
                 android:textSize="30sp" />
 
             <EditText
-                android:id="@+id/edt_mail_info"
+                android:id="@+id/edt_houseNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
@@ -96,7 +86,7 @@
                 android:fontFamily="@font/henam"
                 android:gravity="center"
                 android:inputType="textPersonName"
-                android:textColor="@color/text_hint"
+                android:text="1"
                 android:textColorHint="@color/text_hint"
                 android:textSize="30sp" />
 
@@ -114,11 +104,11 @@
                 android:layout_weight="0.5"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
-                android:text="닉네임 :"
+                android:text="줄 수"
                 android:textSize="30sp" />
 
             <EditText
-                android:id="@+id/edt_nick_info"
+                android:id="@+id/edt_lineNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
@@ -127,31 +117,97 @@
                 android:ems="10"
                 android:fontFamily="@font/henam"
                 android:gravity="center"
+                android:hint="입력하세요!"
                 android:inputType="textPersonName"
                 android:textColor="@color/text_hint"
                 android:textColorHint="@color/text_hint"
                 android:textSize="30sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_joindate"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="20dp"
             android:layout_weight="0.5"
-            android:background="@drawable/edit_text_bg"
-            android:fontFamily="@font/henam"
-            android:gravity="center"
-            android:hint="가입일자"
-            android:textSize="30sp" />
+            android:background="@drawable/edit_text_bg">
 
-        <Button
-            android:id="@+id/btn_refresh_fInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/henam"
-            android:text="정보 수정" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:fontFamily="@font/henam"
+                android:gravity="center"
+                android:text="구역 수"
+                android:textSize="30sp" />
+
+            <EditText
+                android:id="@+id/edt_areaNum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:background="@drawable/edit_text_bg"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:fontFamily="@font/henam"
+                android:gravity="center"
+                android:hint="입력하세요!"
+                android:inputType="textPersonName"
+                android:textColor="@color/text_hint"
+                android:textColorHint="@color/text_hint"
+                android:textSize="30sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_weight="0.5"
+            android:background="@drawable/edit_text_bg">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:fontFamily="@font/henam"
+                android:gravity="center"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_weight="0.5">
+
+            <LinearLayout
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+
+            <Button
+                android:id="@+id/btn_refresh_fInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/henam"
+                android:text="갱신하기" />
+
+            <LinearLayout
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+
+            <Button
+                android:id="@+id/btn_updateFarmInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/henam"
+                android:text="수정하기" />
+
+            <LinearLayout
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -187,7 +243,7 @@
             android:layout_gravity="center"
             android:fontFamily="@font/henam"
             android:gravity="left"
-            android:text="      내 정보"
+            android:text="      농장 정보"
             android:textSize="30sp" />
 
     </LinearLayout>
