방제달력, 다이어리 글 쓰기, 다이어리 글 불러오기, 다이어리 글 읽기 기능 구현, UI 수정

--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -31,7 +31,7 @@
             android:layout_gravity="center"
             android:fontFamily="@font/henam"
             android:gravity="left"
-            android:text="   방제 다이어리"
+            android:text="   방제 달력"
             android:textSize="30sp" />
 
 
