--- a/app/src/main/res/layout/activity_diary_contents.xml
+++ b/app/src/main/res/layout/activity_diary_contents.xml
@@ -7,7 +7,7 @@
     tools:context=".DiaryContents">
 
     <TextView
-        android:id="@+id/textView29"
+        android:id="@+id/tv_content_pesti"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="15dp"
@@ -20,10 +20,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/textView30" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content_humid" />
 
     <TextView
-        android:id="@+id/textView30"
+        android:id="@+id/tv_content_humid"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="15dp"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
-        android:id="@+id/textView31"
+        android:id="@+id/tv_content_disease"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="45dp"
@@ -51,10 +51,10 @@
         android:text="33%"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView35"
-        app:layout_constraintTop_toBottomOf="@+id/textView38" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content_temp" />
 
     <TextView
-        android:id="@+id/textView32"
+        android:id="@+id/tv_content_cnt"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="18dp"
@@ -65,7 +65,7 @@
         android:text="3회"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView37"
-        app:layout_constraintTop_toBottomOf="@+id/textView31" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content_disease" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/img_farm_back"
+            android:id="@+id/img_diary_content_back"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -117,7 +117,7 @@
         android:fontFamily="@font/henam"
         android:text="농장 습도"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView38"
+        app:layout_constraintStart_toEndOf="@+id/tv_content_temp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
@@ -141,7 +141,7 @@
         android:fontFamily="@font/henam"
         android:text="방제 약품"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView31"
+        app:layout_constraintStart_toEndOf="@+id/tv_content_disease"
         app:layout_constraintTop_toBottomOf="@+id/textView34" />
 
     <TextView
@@ -157,7 +157,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView35" />
 
     <TextView
-        android:id="@+id/textView38"
+        android:id="@+id/tv_content_temp"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="18dp"
@@ -171,7 +171,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -180,7 +180,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView40" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content_content" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navi"
@@ -188,10 +188,11 @@
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_menu" />
 
     <TextView
-        android:id="@+id/textView39"
+        android:id="@+id/tv_content_title"
         android:layout_width="295dp"
         android:layout_height="41dp"
         android:layout_marginStart="20dp"
@@ -202,7 +203,7 @@
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView22"
-        app:layout_constraintTop_toBottomOf="@+id/textView42" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content_date" />
 
     <TextView
         android:id="@+id/textView22"
@@ -217,7 +218,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
     <TextView
-        android:id="@+id/textView40"
+        android:id="@+id/tv_content_content"
         android:layout_width="362dp"
         android:layout_height="184dp"
         android:layout_marginTop="24dp"
@@ -228,7 +229,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView39" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content_title" />
 
     <TextView
         android:id="@+id/textView41"
@@ -243,7 +244,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
     <TextView
-        android:id="@+id/textView42"
+        android:id="@+id/tv_content_date"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginStart="18dp"
@@ -254,5 +255,5 @@
         android:text="2022.06.02"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView41"
-        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content_cnt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
