--- a/app/src/main/res/layout/activity_diary_list.xml
+++ b/app/src/main/res/layout/activity_diary_list.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/img_farm_back"
+            android:id="@+id/img_diary_list_back"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -39,7 +39,7 @@
     <ListView
         android:id="@+id/diary_listview"
         android:layout_width="338dp"
-        android:layout_height="502dp"
+        android:layout_height="0dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
