--- a/app/src/main/res/layout/activity_diary_write.xml
+++ b/app/src/main/res/layout/activity_diary_write.xml
@@ -32,10 +32,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/tv_toFarmInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_humid" />
 
     <TextView
-        android:id="@+id/tv_toFarmInfo"
+        android:id="@+id/tv_humid"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="15dp"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/img_farm_back"
+            android:id="@+id/img_diary_write_back"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -228,6 +228,7 @@
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
